--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
+    "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
