--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@tsparticles/slim": "^3.3.0",
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
